# Mod-Mail

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GCP_SETUP.md  SECRET.md  client-info.json  run.sh  startup-script.sh
.github/workflows/: deploy.yml  local-deploy.yml
data/guilds/: 1245472970512666644.json  1456091055563870311.json
logs/: cloud-logs.json  github-actions-deploy.txt
src/: lib.rs  main.rs
src/builder/: mod.rs
src/config/: mod.rs
src/message/: mod.rs
src/messaged/: embed.json  mod.rs
src/ping/: embed.json  mod.rs
src/report/: mod.rs
src/setup/: mod.rs
src/storage/: mod.rs
src/templates/: mod.rs
src/webhooks/: mod.rs
